--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "moduleResolution": "node",
       "outDir": "./dist",
       "rootDir": "./src",
+      "types": ["reflect-metadata"],
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "sourceMap": true,
