--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "start": "pm2 start dist/index.js",
+    "dev": "nodemon src/index.ts",
     "build": "tsc -p ."
   },
   "keywords": [],
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^8.0.29",
+    "nodemon": "^2.0.7",
     "ts-node": "3.3.0",
     "tslint": "^6.1.3",
     "typescript": "3.3.3333"
