--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/cors": "^2.8.9",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.5",
+    "@types/nodemailer": "^6.4.0",
     "@types/uuid": "^8.3.0",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
@@ -35,6 +36,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.14.1",
+    "nodemailer": "^6.4.18",
     "reflect-metadata": "^0.1.10",
     "typeorm": "0.2.24",
     "uuid": "^8.3.2"
